--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ button{
     border-radius: 4px;
     cursor: pointer;
 }
+button:hover{
+    background-color: #651f71;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
 .container{
     background-color: antiquewhite;
     padding: 40px;
